// Copyright 2006-2008 Google Inc. All Rights Reserved.

syntax = "proto2";

package com.google.appengine.base;

message StringProto {
  required string value = 1;
};

message Integer32Proto {
  required int32 value = 1;
};

message Integer64Proto {
  required int64 value = 1;
};

message BoolProto {
  required bool value = 1;
};

message DoubleProto {
  required double value = 1;
};

message VoidProto {
};
